syntax = "proto3";

package collectable;

message CollectableRunnerSettings {
  optional string setting_value = 1;
}
